fix/socialIcons: fix social icons color and spacing (#52)

--- a/src/components/social/social.scss
+++ b/src/components/social/social.scss
@@ -4,7 +4,6 @@
   &-iconContainer {
     border-radius: 50%;
     border: 1px solid white;
-    margin-right: 5px;
     background-color: transparent;
     height: 25px;
     width: 25px;
@@ -15,24 +14,28 @@
     cursor: pointer;
 
     &-linkedin {
+      padding: 2px;
       &:hover {
         background-color: #0073b2;
       }
     }
 
     &-facebook {
+      padding: 2px;
       &:hover {
         background-color: #3a5997;
       }
     }
 
     &-twitter {
+      padding: 2px;
       &:hover {
         background-color: #1aa1f1;
       }
     }
 
     &-imdb {
+      padding: 2px;
       margin-top: 0 !important;
       margin-bottom: 0 !important;
 
@@ -42,18 +45,23 @@
     }
 
     &-instagram {
+      padding: 2px;
       &:hover {
         background-color: #ee1d23;
       }
     }
 
     &-tumblr {
+      padding: 2px;
       &:hover {
         background-color: #001935;
       }
     }
 
     &-email {
+      padding: 5px;
+      height: 20px;
+      width: 20px;
       &:hover {
         background-color: #1bd760;
       }
